Overflow fix

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -99,3 +99,8 @@
     
   }
   
+  @media (max-width: 600px) {
+    html, body {
+      overflow-x: hidden;
+    }
+  } 
